[package]
authors = ["Informal Systems <hello@informal.systems>"]
categories = ["cryptography::cryptocurrencies", "encoding", "no-std"]
description = """
    ibc-proto provides Cosmos SDK & IBC Protocol Buffers definitions
"""
edition = "2021"
exclude = ["definitions", "tools", ".changelog", ".github"]
keywords = ["blockchain", "cosmos", "tendermint", "ibc", "proto"]
license = "Apache-2.0"
name = "ibc-proto"
readme = "README.md"
repository = "https://github.com/cosmos/ibc-proto-rs"
version = "0.38.0"

[workspace]
members = [
  ".",
  "tools/proto-compiler",
]

[lib]
doctest = false
name = "ibc_proto"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true

[dependencies]
base64 = {version = "0.21", default-features = false, features = ["alloc"]}
bytes = {version = "1.2", default-features = false}
flex-error = {version = "0.4", default-features = false}
ics23 = {version = "0.11.0", default-features = false}
prost = {version = "0.12", default-features = false, features = ["prost-derive"]}
schemars = {version = "0.8", optional = true}
serde = {version = "1.0", default-features = false, optional = true}
subtle-encoding = {version = "0.5", default-features = false}
tonic = {version = "0.10", default-features = false, optional = true}

## Optional: enabled by the `parity-scale-codec` feature
parity-scale-codec = {version = "3.0.0", default-features = false, features = ["full"], optional = true}
scale-info = {version = "2.1.2", default-features = false, features = ["derive"], optional = true}

## Optional: enabled by the `borsh` feature
## For borsh encode or decode, needs to track `anchor-lang` and `near-sdk-rs` borsh version
borsh = {version = "0.10", default-features = false, optional = true}

[dependencies.tendermint-proto]
default-features = false
git = "https://github.com/perfogic/tendermint-rs"
rev = "a56f4975349dffecfa869e94526f231b477a7cd7"

[features]
borsh = ["dep:borsh"]
client = ["std", "dep:tonic", "tonic/codegen", "tonic/transport", "tonic/prost"]
default = ["std", "client"]
json-schema = ["std", "serde", "dep:schemars"]
parity-scale-codec = ["dep:parity-scale-codec", "dep:scale-info"]
proto-descriptor = []
serde = ["dep:serde", "ics23/serde"]
server = ["std", "dep:tonic", "tonic/codegen", "tonic/transport", "tonic/prost"]
std = ["prost/std", "bytes/std", "subtle-encoding/std", "base64/std", "flex-error/std", "ics23/std"]
